test_suite/tests/ui/with-variant/skip_ser_newtype_field.stderr
error: variant `Newtype` cannot have both #[serde(serialize_with)] and a field #0 marked with #[serde(skip_serializing)]
 --> $DIR/skip_ser_newtype_field.rs:5:5
  |
5 | /     #[serde(serialize_with = "serialize_some_newtype_variant")]
6 | |     Newtype(#[serde(skip_serializing)] String),
  | |______________________________________________^
